--- a/_source/assets/css/styles.css
+++ b/_source/assets/css/styles.css
@@ -375,13 +375,15 @@ a:active {
   color: #820d71; }
 
 .bar {
-  background: #3c0e62 url("../img/bg-mountains.jpg") no-repeat 0 bottom;
-  background-size: cover;
+  background: linear-gradient(to bottom, #3c004a 0, #664b9d 66%, #7cb7ad 100%);
   height: 21rem;
   position: absolute;
   top: 0;
   z-index: -1;
   width: 100%; }
+  @media (min-width: 600px) {
+    .bar {
+      background: linear-gradient(to bottom, #3c004a 0, #664b9d 66%, #7cb7ad 100%); } }
 
 .wrapper {
   max-width: 1153px;
@@ -412,6 +414,9 @@ header {
   color: #fff;
   padding: 1rem;
   text-transform: uppercase; }
+  header a {
+    color: #fff !important;
+    text-decoration: none; }
   @media (min-width: 940px) {
     header {
       height: 16rem;
@@ -439,24 +444,33 @@ nav {
       background: transparent;
       padding: 2.5rem 0; } }
   nav .links {
-    display: block;
+    display: flex;
+    justify-content: space-between;
     list-style: none;
     margin: 0;
     padding: 0; }
+    @media (min-width: 940px) {
+      nav .links {
+        display: block; } }
     nav .links li {
       color: #000;
       display: block;
       font-size: 1.25rem;
       font-weight: 700;
       line-height: 1.5rem;
-      margin-bottom: 0.75rem;
-      overflow: hidden; }
+      margin-bottom: 0;
+      overflow: hidden;
+      white-space: nowrap; }
+      @media (min-width: 940px) {
+        nav .links li {
+          margin-bottom: 0.75rem; } }
       nav .links li:last-child {
         margin-bottom: 0; }
       nav .links li .circle {
-        background: #5bab7d;
+        background: #6dc1b3;
         border-radius: 100%;
         color: #fff;
+        display: none;
         float: left;
         font-size: 1rem;
         height: 1.5rem;
@@ -465,6 +479,9 @@ nav {
         position: relative;
         text-align: center;
         width: 1.5rem; }
+        @media (min-width: 940px) {
+          nav .links li .circle {
+            display: block; } }
         nav .links li .circle:before {
           position: relative;
           left: 0;
@@ -479,7 +496,7 @@ nav {
         text-decoration: underline; }
         nav .links li a:hover .circle,
         nav .links li a:active .circle {
-          background-color: #15a652; }
+          background-color: #3b887b; }
 
 .content {
   background: #fff;
@@ -608,8 +625,9 @@ nav {
     margin-top: 0.5rem;
     padding: 0.5rem 1rem;
     font-style: italic; }
-  .project-screenshot .add-border {
-    border: 1px #ccc solid; }
+
+.add-border {
+  border: 1px #ccc solid; }
 
 .pretty-thumbnail {
   background: #4f9c9c;
@@ -620,6 +638,8 @@ nav {
   align-items: center;
   flex-direction: column;
   margin-bottom: 2rem; }
+  .pretty-thumbnail img {
+    max-width: 100%; }
 
 .projects-main .pretty-thumbnail {
   padding: 1rem; }
