--- a/_source/templates/pages/connect.mustache
+++ b/_source/templates/pages/connect.mustache
@@ -5,16 +5,7 @@
 	<div class="bar"></div>
 
 	<div class="wrapper">	
-
-		<div class="sidebar">
-
-			<header>
-				<h1>Annette Arabasz <span>UX Developer</span></h1>
-			</header>	
-
-			{{> partials/nav }}
-
-		</div>		
+		{{> partials/sidebar }}	
 
 		<div class="content">
 
