--- a/_source/templates/pages/index.mustache
+++ b/_source/templates/pages/index.mustache
@@ -5,31 +5,22 @@
 	<div class="bar"></div>
 
 	<div class="wrapper">	
-
-		<div class="sidebar">
-
-			<header>
-				<h1>Annette Arabasz <span>UX Developer</span></h1>
-			</header>	
-
-			{{> partials/nav }}
-
-		</div>		
-
+		{{> partials/sidebar }}
 		<div class="content">
 
 			<section class="about">
+			
 				<h2>About Me</h2>
-				<p>I'm a <strong>UX Developer in Boston</strong> with over 15 years of coding experience. My background is in Graphic Design, and I love working on human-centric projects.</p> 
+				<p>I'm a <strong>UX Designer/Developer</strong> in Boston with 15+ years of experience. With a background in graphic design, I enjoy bridging the gap between creative teams and engineering.</p> 
 
-				<p>I'm passionate about tech inclusion and started the Boston chapter of <a href="https://www.girldevelopit.com" target="_blank">Girl Develop It</a>, a national non-profit offering affordable coding classes for women. You might've also caught me presenting at UXPA Boston or Bentley University.</p>
+				<p>I'm passionate about tech inclusion and started the Boston chapter of <a href="https://www.girldevelopit.com" target="_blank">Girl Develop It</a>, a national non-profit offering affordable coding classes for women.</p>
 
 				<p>Beyond the pixels, you'll find me navigating the fiery world of hot sauces, indulging in craft beers or hiking with my Corgi <a href="http://instagram.com/starbuck_the_corgi" target="_blank">Starbuck</a>.</p>
 			</section> 
 
 			<section class="projects">
 			  	<h2 class="h3">Brands I've Worked With</h2>
-			  	<p>Below are some of the brands and companies I have worked with. See <a href="projects.html">Projects</a> for work examples.</p>
+			  	<p>Below are some of the brands I have worked with. See <a href="projects.html">Projects</a> for work examples.</p>
 			  	{{> partials/clients }}
 			</section>
 		</div>
