--- a/_source/templates/pages/project-cake-01.mustache
+++ b/_source/templates/pages/project-cake-01.mustache
@@ -6,10 +6,7 @@
 
 	<div class="wrapper">	
 
-		<div class="sidebar">
-			{{> partials/headline }}
-			{{> partials/nav }}
-		</div>		
+		{{> partials/sidebar }}	
 
 		<div class="content">
 
