--- a/_source/templates/pages/project-cake-02.mustache
+++ b/_source/templates/pages/project-cake-02.mustache
@@ -6,11 +6,7 @@
 
 	<div class="wrapper">	
 	
-		<div class="sidebar">
-			{{> partials/headline }}
-			{{> partials/nav }}
-		</div>		
-
+		{{> partials/sidebar }}
 		<div class="content">
 
 				<h2>Cake: Creating an intuitive fundraising tool for Memorial and Funeral planners</h2>
