--- a/_source/templates/pages/project-espn-02.mustache
+++ b/_source/templates/pages/project-espn-02.mustache
@@ -5,11 +5,7 @@
 	<div class="bar"></div>
 
 	<div class="wrapper">	
-	
-		<div class="sidebar">
-			{{> partials/headline }}
-			{{> partials/nav }}
-		</div>			
+		{{> partials/sidebar }}		
 
 		<div class="content">
 
