--- a/_source/templates/pages/project-espn.mustache
+++ b/_source/templates/pages/project-espn.mustache
@@ -5,12 +5,7 @@
 	<div class="bar"></div>
 
 	<div class="wrapper">	
-
-		<div class="sidebar">
-			{{> partials/headline }}
-			{{> partials/nav }}
-		</div>		
-
+		{{> partials/sidebar }}
 		<div class="content">
 
 				<h2>ESPN Event Wrap-ups</h2>
