--- a/_source/templates/pages/project-fidelity.mustache
+++ b/_source/templates/pages/project-fidelity.mustache
@@ -6,11 +6,7 @@
 
 	<div class="wrapper">	
 
-		<div class="sidebar">
-			{{> partials/headline }}
-			{{> partials/nav }}
-		</div>		
-
+		{{> partials/sidebar }}
 		<div class="content">
 
 				<h2>Fidelity Healthcare Marketplace</h2>
