--- a/_source/templates/pages/project-va.mustache
+++ b/_source/templates/pages/project-va.mustache
@@ -5,12 +5,7 @@
 	<div class="bar"></div>
 
 	<div class="wrapper">	
-
-		<div class="sidebar">
-			{{> partials/headline }}
-			{{> partials/nav }}
-		</div>		
-
+		{{> partials/sidebar }}
 		<div class="content">
 
 				<h2>VA.gov: Responsive Design System</h2>
