--- a/_source/templates/partials/html-head.mustache
+++ b/_source/templates/partials/html-head.mustache
@@ -30,6 +30,7 @@
   	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">	
   	<link rel="stylesheet" href="assets/css/styles.css">
   	<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One|Droid+Sans:400,700|Droid+Serif:400,700" rel="stylesheet">
+	<meta name="thumbnail" content="assets/img/pic-me.jpg" />
 
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
