Adding swatch list to info page.

--- a/_source/templates/pages/index.mustache
+++ b/_source/templates/pages/index.mustache
@@ -2,26 +2,24 @@
 
 <body>
 
-	<div class="bar"></div>
-
-	<div class="wrapper">	
+	<div class="bar"></div> 
+ 
+	 <div class="wrapper">	
 		{{> partials/sidebar }}
 		<div class="content">
-
 			<section class="intro">
 				<div class="fancy-heading">
 					<div class="fancy-photo">
 						<img src="assets/img/pic-me.jpg" alt="Annette profile photo" />
 					</div>
 					<div>
-						<p>I'm Annette, a <strong>UX Developer</strong> who enjoys bridging the gap between design and engineering.</p> 	
-		
+						<h2 class="heading">I'm Annette, a developer specialized in bridging the gaps between <span class="highlight">design</span> and <span class="highlight">engineering</span>.</h2> 	
 					</div>
 				</div>
 			</section> 
+ 
 
-
-			<h3>Highlighted projects</h3>
+			<h3>Featured projects</h3>
 			{{> partials/projects-main }}
 
 		</div>
