--- a/_source/templates/pages/nitty-gritty.mustache
+++ b/_source/templates/pages/nitty-gritty.mustache
@@ -22,6 +22,36 @@
 			</ul>
 			<p>* Please note that at the time, all these technologies were "modern". So if you're reading this in the year 2050, you may be having a good laugh!</p>
 
+			<h3>Colors</h3>
+			<p>My palette is based on the Northern Lights, inspired by the completion of an amazing bucket list trip to Iceland in 2014.</p>
+			<div class="swatch-list">
+				<div class="swatch" style="background: #6D5191">
+					<div class="swatch-info">
+						<span>$color-purple</span>
+						<span>#6D5191</span>
+					</div>
+				</div>
+				<div class="swatch" style="background: #B86CA6">
+					<div class="swatch-info">
+						<span>$color-fuchsia</span>
+						<span>#B86CA6</span>
+					</div>
+				</div>	
+				<div class="swatch" style="background: #6dc1b3;">
+					<div class="swatch-info">
+						<span>$color-lagoon</span>
+						<span>#6dc1b3</span>
+					</div>
+				</div>
+				<div class="swatch" style="background: #f0ee86;">
+					<div class="swatch-info">
+						<span>$color-celery</span>
+						<span>#f0ee86</span>
+					</div>
+				</div>
+											
+			</div>					
+
 			<div style="display: none;">
 				<br>
 				<h3>Archive (pre-2016)</h3>
