--- a/_source/templates/pages/projects.mustache
+++ b/_source/templates/pages/projects.mustache
@@ -8,16 +8,16 @@
 		<div class="content">
 
 				<h2>Projects</h2>
-				<p>This page contains some examples of my work in coding and design.</p>
-				<p><em>Please note that due to privacy agreements, not all of my work may appear below. Please <a href="connect.html">contact me</a> if there is specific work you'd like examples of.</em></p>
+				<p>This page contains some examples of my work in design and coding.</p>
+				<p><em>Due to privacy agreements, some of my work is not included here. Please <a href="connect.html">contact me</a> if there is specific work you'd like examples of.</em></p>
 				<br />
 
-				<h3>Highlighted projects</h3>
+				<h3 class="h4">Highlighted projects</h3>
 				{{> partials/projects-main }}
 
 				<br />
 
-				<h3>Older projects</h3>
+				<h3 class="h4">Older projects</h3>
 			  	{{> partials/projects-archive }}	
 
 
