--- a/_source/assets/scss/structure.scss
+++ b/_source/assets/scss/structure.scss
@@ -15,10 +15,11 @@ $medium-screen: 600px;
 $large-screen: 940px;
 $x-large-screen: 1200px;
 
-$color-2: #b548a6;
-$color-3: #820d71;
-
-$purple-1: #645389;
+$color-gray-light: #e7e7e7;
+$color-purple: #6d5191;
+$color-fucshia: #b86ca6;
+$color-lagoon: #0b1110;
+$color-celery: #f0ee86;
 
 @include border-box-sizing;
 
@@ -29,12 +30,12 @@ body {
 
 a:link,
 a:visited {
-  color: $color-2;
+  color: $color-purple;
 }
 
 a:hover,
 a:active {
-  color: $color-3;
+  color: #9568cf;
 }
 
 .bar {
@@ -194,6 +195,7 @@ nav {
   background: #fff;
   padding: 2rem 1rem 1rem;
   position: relative;
+  z-index: 1;
 
   @include span(12);
 
@@ -201,7 +203,7 @@ nav {
     @include span(last 9);
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.05);
     min-height: 40rem;
-    padding: 3.5rem 2.5rem 2.5rem;
+    padding: 3rem 2.5rem 2.5rem;
   }
 
   > section {
@@ -216,15 +218,17 @@ nav {
 
 // Homepage Intro
 .fancy-heading {
+  border-bottom: 2px solid $color-gray-light;
   display: flex;
   align-items: center;
-  margin-bottom: 0.5rem;
+  padding-bottom: 2rem;
+
   .fancy-photo {
-    height: 15%;
+    height: 20%;
     overflow: hidden;
-    width: 15%;
+    width: 20%;
     border-radius: 50%;
-    background: lightgray;
+    background: $color-gray-light;
     flex-shrink: 0;
     margin-right: 1rem;
     img {
@@ -232,13 +236,15 @@ nav {
       max-width: 100%;
     }
   }
-  p {
-    font-size: 16px;
+  .heading {
+    font-size: 18px;
+    font-weight: 400;
     line-height: 1.25;
     margin: 0;
     max-width: 60ch;
     @media (min-width: $medium-screen) {
-      font-size: 24px;
+      font-size: 28px;
+      max-width: 50ch;
     }
   }
 }
@@ -246,6 +252,24 @@ nav {
 .fancy-indent {
   @media (min-width: $medium-screen) {
     //margin-left: 118px;
+  }
+}
+
+.highlight {
+  position: relative;
+
+  &:after {
+    /* Highlight color */
+    background-color: #f0ee86;
+
+    content: "";
+    position: absolute;
+    width: calc(100% + 4px);
+    height: 60%;
+    left: -2px;
+    bottom: 0;
+    z-index: -1;
+    transform: rotate(-2deg);
   }
 }
 
@@ -260,7 +284,6 @@ nav {
 }
 
 // Projects
-
 .projects {
   margin-bottom: 0;
 }
@@ -293,9 +316,7 @@ nav {
     padding: 1.5rem 0.5rem 0.5rem;
 
     h4 {
-      font-size: 1rem;
-      line-height: 1.25;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.25rem;
       text-transform: none;
 
       a {
@@ -330,18 +351,23 @@ nav {
   display: flex;
   flex-direction: column;
   .project {
+    display: block;
     border-bottom: 1px #ececec solid;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
     > figure {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-column-gap: 0px;
       margin: 0;
+      @media (min-width: $large-screen) {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 0px;
+        margin: 0;
+      }
+
       figcaption {
-        grid-column: 2 / 5;
-        padding: 0 1rem;
+        padding: 0;
         @media (min-width: $large-screen) {
+          grid-column: 2 / 5;
           padding: 0 1.5rem;
         }
         p:last-child {
@@ -410,6 +436,10 @@ nav {
   flex-direction: column;
   margin-bottom: 2rem;
 
+  .img-container {
+    border: 0;
+  }
+
   img {
     max-width: 100%;
   }
@@ -419,6 +449,49 @@ nav {
   padding: 1rem;
 }
 
+.project-snapshot {
+  margin-bottom: 1rem;
+
+  @media (min-width: $medium-screen) {
+    align-items: flex-start;
+    display: flex;
+    flex-wrap: nowrap;
+    flex: 1 0 0px;
+    gap: 0.5rem;
+  }
+
+  section {
+    display: block;
+    &.col-1 {
+      flex: 50%;
+    }
+    &.col-2 {
+      flex: 25%;
+      margin-top: 1rem;
+      @media (min-width: $medium-screen) {
+        margin-top: 0;
+      }
+    }
+    &.col-3 {
+      flex: 25%;
+    }
+  }
+  .heading {
+    font-size: 16px;
+    margin: 0 0 0.25rem;
+  }
+  p,
+  ul li {
+    font-size: 0.875rem;
+    line-height: 1.25;
+    margin: 0;
+  }
+  ul {
+    padding-left: 20px;
+  }
+}
+
+// Client grid
 .clients-container {
   @include container(12);
 
@@ -429,16 +502,8 @@ nav {
 
     @include span(6 of 12);
 
-    &:nth-child(2n + 2) {
-      //clear: left;
-    }
-
     @media (min-width: $large-screen) {
       @include span(3 of 12);
-
-      &:nth-child(4n + 4) {
-        //clear: left;
-      }
     }
 
     figure {
@@ -538,26 +603,49 @@ nav {
   }
 
   li {
-    background: #645389;
+    background: $color-fucshia;
     border-radius: 3px;
     color: #fff;
     display: inline-block;
-    font-family: arial, sans-serif;
-    font-size: 10px;
-    font-weight: 600;
-    letter-spacing: 1px;
-    line-height: 10px;
     margin: 0 1px 4px 0;
     padding: 6px 8px;
-    text-transform: uppercase;
     white-space: nowrap;
 
     &.tag-design {
-      background: #ad5c99;
+      background: $color-purple;
     }
     &.tag-other {
       background: #9ead5c;
     }
+  }
+}
+
+.swatch-list {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  .swatch {
+    background: gray;
+    border: 1px $color-gray-light solid;
+    border-radius: 8px;
+    height: 175px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+  }
+  .swatch-info {
+    background: #333;
+    color: white;
+    padding: 0.5rem;
+    font-size: 15px;
+    font-family: monospace;
+    @media (min-width: $large-screen) {
+      font-size: 15px;
+    }
+  }
+  span + span {
+    margin-top: 4px;
   }
 }
 
