--- a/_source/templates/pages/about.mustache
+++ b/_source/templates/pages/about.mustache
@@ -13,7 +13,7 @@
 				<h2>About Me</h2>
 				<p>Over the last 15 years, I've built websites for small startups and global agencies. With a background in Graphic Design, I believe that good design must be understandable, unobtrusive and accessible.</p>
 
-				<p>My specialties include design systems and guiding companies in adopting them. I've presented about responsive web design at <a class="highlight" href="http://conference.uxpaboston.org" target="_blank">UXPA</a> and Bentley University.</p>
+				<p>My specialties include design systems and guiding companies in adopting them. I've presented about responsive web design at <a href="http://conference.uxpaboston.org" target="_blank">UXPA</a> and Bentley University.</p>
 
 				<p>I'm passionate about tech inclusion and started <a href="https://www.girldevelopit.com" target="_blank">Girl Develop It</a> in Boston, offering affordable coding classes for women.</p>
 				
