--- a/_source/templates/pages/project-cake-01.mustache
+++ b/_source/templates/pages/project-cake-01.mustache
@@ -10,9 +10,11 @@
 
 		<div class="content">
 
-				<h2>Cake: Using design to improve trust, credibility and brand presence</h2>
+				<h2>Cake: UX Audit</h2>
 				<ul class="list-tags">
 					<li class="tag-design">UX</li>
+					<li class="tag-design">UI Design</li>
+					<li class="tag-design">Information Architecture</li>
   					<li>HTML</li>
   					<li>CSS</li>
   					<li>Bootstrap</li>	
@@ -22,7 +24,7 @@
 
 				<br /> 
 
-				<div class="pretty-thumbnail" style="background-color: #7899c2;"><img src="https://aa-portfolio.imgix.net/thumbnail-cake-01.png?w=536" alt="project screenshot">
+				<div class="pretty-thumbnail" style="background-color: #d5cfe7;"><img src="https://aa-portfolio.imgix.net/thumbnail-cake-01.png?w=536" alt="project screenshot">
 				</div>
 
 				<h3>Overview</h3>
