--- a/_source/templates/pages/about.mustache
+++ b/_source/templates/pages/about.mustache
@@ -11,9 +11,9 @@
 			<section class="about">
 			
 				<h2>About Me</h2>
-				<p>Over the last 15 years, I've built websites for small startups and global agencies. With a background in Graphic Design, I believe that good design must be understandable, unobtrusive and accessible.</p>
+				<p>Hi! I'm a UX developer from the Boston area. Over the last 15 years, I've built websites for small startups and global agencies. With a background in Graphic Design, I believe that good design must be understandable, unobtrusive and accessible.</p>
 
-				<p>My specialties include design systems and guiding companies in adopting them. I've presented about responsive web design at <a href="http://conference.uxpaboston.org" target="_blank">UXPA</a> and Bentley University.</p>
+				<p>My specialties include design systems. In one of my last roles, I was a subject matter expert on design systems and led workshops to train clients on the ins-and-outs of adopting one. Additionally, I've presented about responsive web design at <a href="http://conference.uxpaboston.org" target="_blank">UXPA</a> and to UX/HCI students at Bentley University.</p>
 
 				<p>I'm passionate about tech inclusion and started <a href="https://www.girldevelopit.com" target="_blank">Girl Develop It</a> in Boston, offering affordable coding classes for women.</p>
 				
